DT-2004-03-04-3  Bugfix:    o qconf now validates scheduler configuration
                              settings
                 Changed:   qconf

AH-2004-03-04-0: Bugfix:    qselect/qstat -l selection wrongly considers 
                            load and utilization
                 Issue:     771
                 Review:    AS

CR-2004-03-04-0  Bugfix:    Rolled back change from CR-2004-03-02-2:
                            all clients will now log error and critical 
                            messages to stderr again. 

                            Submitted cleanup issue: #744
                 Changed:   all qXXXX clients
                 
MD-2004-03-04-1: Bugfix:    - Pattern matching for -l q= doesn't work 
                              per default 
                 Issue:     759
                 Review:    SG
                 Changed:   install

DT-2004-03-04-2  Bugfix:    o Removed duplicate error messages for missing
                              SGE_ROOT in execd and schedd
                            o Added missing error message for missing SGE_ROOT
                              in qmon
                 Changed:   execd, schedd, setup_gdi.c
                 Issue:     774

DT-2004-03-04-1  Bugfix:    o Removed duplicate error message for missing
                              SGE_ROOT
                 Changed:   age_arch.c
                 Issue:     768

MD-2004-03-04-0  Bugfix:    - Removed warning message at execd install
                            - Formatting, text cleaning, typo
                 Issue:     763
                 Changed:   testsuite, inst_sge

EB-2004-03-04-0  Bugfix:    - misleading message of "qstat -explain a" if 
                              execd is down
                            - slots in queue_conf(5) accepts 1,myslots=5, \
                              [@allhosts=4]
                 Issue:     765, 755
                 Changed:   qstat, qmon, qmaster
                 Review:    SG
